<resources>
    <string name="app_name">Score Keeper</string>
    <string name="teamA_text">Team A</string>
    <string name="teamB_text">Team B</string>
    <string name="scoreA_text">0</string>
    <string name="scoreB_text">0</string>
    <string name="add_button">Add</string>
    <string name="deduct_button">Deduct</string>
    <string name="radio1_button">1 point</string>
    <string name="radio2_button">2 points</string>
    <string name="radio3_button">3 points</string>
    <string name="clear_button">Clear</string>
    <string name="night_mode_switch">Night Mode</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="setting_text">Settings</string>
    <string name="save_text">Save score</string>
</resources>