<?xml version="1.0" encoding="utf-8"?>
<!--Divide the screen into upper and lower part-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3">

    <!--Divide the upper part into left and right-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_weight="1">

        <!--Vertical and center the left part-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <!--Team A title-->
            <TextView
                android:id="@+id/team_text_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/teamA_text"
                android:layout_marginBottom="50dp"
                android:textSize="32dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/add_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_button"
                android:drawableEnd="@drawable/add_icon"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <TextView
                android:id="@+id/score_text_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/scoreA_text"
                android:textSize="40dp" />

            <Button
                android:id="@+id/deduct_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/deduct_button"
                android:drawableEnd="@drawable/deduct_icon"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

        </LinearLayout>

        <!--Vertical and center the right part-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <!--Team B title-->
            <TextView
                android:id="@+id/team_text_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="@string/teamB_text"
                android:textSize="32dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/add_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_button"
                android:drawableEnd="@drawable/add_icon"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <TextView
                android:id="@+id/score_text_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/scoreB_text"
                android:textSize="40dp" />

            <Button
                android:id="@+id/deduct_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/deduct_button"
                android:drawableEnd="@drawable/deduct_icon"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="2">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="100dp" >

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio1_button"
                android:textColor="@android:color/system_neutral2_700"
                android:textSize="30dp" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio2_button"
                android:textColor="@android:color/system_neutral2_700"
                android:textSize="30dp" />

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio3_button"
                android:textColor="@android:color/system_neutral2_700"
                android:textSize="30dp" />
        </RadioGroup>

    </LinearLayout>

</LinearLayout>